--- a/messaging-portlet-api/src/main/resources/content/Language_ru.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language_ru.properties
@@ -21,10 +21,11 @@ language=Язык
 toClose=Закрыть
 number=Рег. номер в системе
 view=Просмотр
+you=Вы
 
 #actions
 action.CREATE_MSG=Создание сообщений
-action.CREATE_DIALOG=Создание даилогов
+action.CREATE_DIALOG=Создание диалогов
 
 #simple errors
 other.errors=Скрыто ошибок %s
@@ -39,4 +40,6 @@ messaging.receiver=Получатель
 messaging.topic=Тема
 messaging.text=Сообщение
 messaging.empty=Нет сообщений
-messaging.reply=Оставить сообщение
+messaging.reply=Ответить
+
+messaging.error.messageCreation=Ошибка при создании сообщения
