email notifications, mailout

--- a/messaging-portlet-api/src/main/resources/content/Language_ru.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language_ru.properties
@@ -31,6 +31,11 @@ action.CREATE_DIALOG=Создание диалогов
 other.errors=Скрыто ошибок %s
 permission.error=Отсутствую права на запрашиваемое действие
 
+#email
+mail.footer=С уважением, команда russiaeasy.org
+mail.topic=Новое сообщение на russiaeasy.org
+mail.text=Вы получили сообщение на russiaeasy.org
+
 #messaging
 messaging=Сообщения
 messaging.dialog=Диалог
@@ -39,6 +44,7 @@ messaging.createDialog=Создать сообщение
 messaging.receiver=Получатель
 messaging.topic=Тема
 messaging.text=Сообщение
+messaging.sender=Отправитель
 messaging.empty=Нет сообщений
 messaging.reply=Ответить
 
